2010-04-26  Mark Ellis  <mark@mpellis.org.uk>

	* 0.2 release

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.1 release

2009-06-02  Mark Ellis <mark@mpellis.org.uk>

	* implement printing
	* tidy window destruction

2009-05-27  Mark Ellis <mark@mpellis.org.uk>

	* fix premature freeing of device address

2009-05-26  Mark Ellis <mark@mpellis.org.uk>

	* improve clean up of widgets
	* set window size correctly
	* fix key event processing
	* fix connection processing, enable copying of screensnap.exe

2009-05-20  Mark Ellis <mark@mpellis.org.uk>

	* Initial code, mostly functional
